--- a/chrome/content/tabflick/overlay.css
+++ b/chrome/content/tabflick/overlay.css
@@ -26,7 +26,7 @@
 
 /* for compatibility with Firefox 3.5 */
 .tabPreview-canvas {
-	-moz-box-shadow: 1px 1px 3px rgb(12%,12%,12%);
+	box-shadow: 1px 1px 3px rgb(12%,12%,12%);
 }
 
 /* ::::: Windows Aero ::::: */
